# stm32-cmsis-dev-environment

./: .gitignore  Dockerfile  README.md  init_dev.py
stm32_dev/: CMakeLists.txt
stm32_dev/src/: main.c
